--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ section {
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    background: url(assets/background.jpg);
+    background: URL("assets/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
