--- a/style.css
+++ b/style.css
@@ -172,7 +172,11 @@ section {
 
 .info {
     /* margin: _ _; */
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .info h3 {
@@ -180,6 +184,10 @@ section {
     font-size: 1.2em;
     font-weight: 700;
     margin: 10px;
+}
+
+.info #email {
+    transform: scale(0.7);
 }
 
                                         /* PROJECTS SECTION */
