--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ section {
 
 .info {
     /* margin: _ _; */
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
